--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.32",
+        "postcss-import": "^15.1.0",
+        "tailwindcss": "^3.3.6",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "flowbite": "^2.2.0"
     }
 }
